syntax="proto3";

package calculator;


message SumRequest{
    int32 num1=1;
    int32 num2=2;
}

message SumResponse{
    int32 result=3;
}

message PrimeNumberRequest{
    int32 num=1;
}

message PrimeNumberResponse{
     int32 result=1; 
}


message AvgRequest{
    int32 num=1;
}

message AvgResponse{
    double result=1; 
}


message MaxRequest{
    int32 num=1;
}

message MaxResponse{
    int32 result=1; 
}

message SquareRootRequest{
    int32 num=1; 
}

message SquareRootResponse{
    double result=1; 
}

service CalculatorService {
    //unary
    rpc sum (SumRequest) returns (SumResponse) {}
    //server streaming
    rpc primeNumberDecomposition (PrimeNumberRequest) returns (stream PrimeNumberResponse){}

    // client streaming
    rpc avg (stream AvgRequest) returns (AvgResponse) {}

    //bidi streaming
    rpc max(stream MaxRequest) returns (stream MaxResponse) {}

    //error - on negative gives error
    rpc squareRoot(SquareRootRequest) returns (SquareRootResponse) {}
}