syntax="proto3";

package greet;

message Greeting{
    string first_name=1;
    string last_name=2;
}


message GreetingRequest {
    Greeting greeting=1;
}

message GreetingResponse{
    string result=1;
}

message GreetManyTimesRequestServer {
    Greeting greeting=1;
}


message GreetManyTimesResponseServer{
    string result=1;
}

message GreetManyTimesRequestClient {
    Greeting greeting=1;
}


message GreetManyTimesResponseClient{
    string result=1;
}

message GreetBidiRequest {
    Greeting greeting=1;
}


message GreetBidiResponse{
    string result=1;
}


service GreetingService{
    // unary
    rpc greet (GreetingRequest) returns (GreetingResponse) {} 

    //streaming server
    rpc greetManyTimesServer (GreetManyTimesRequestServer) returns (stream GreetManyTimesResponseServer) {}

    // streaming client
    rpc greetManyTimesClient (stream GreetManyTimesRequestClient) returns ( GreetManyTimesResponseClient) {}

    //Bidi streaming
    rpc greetBidi (stream GreetBidiRequest) returns (stream GreetBidiResponse) {}
}

